#462: Changed to use half of available memory in container GlobalDigitalLibraryio/issues#462